--- a/src/popup.css
+++ b/src/popup.css
@@ -11,12 +11,13 @@
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-    color: #222;
+    color: #FEFCFB;
 }
 
 body {
     width: 350px;
     height: 300px;
+    background-color:#1B2244;
 }
 
 .app {
