--- a/src/popup.css
+++ b/src/popup.css
@@ -20,6 +20,19 @@ body {
     background-color:#1B2244;
 }
 
+#login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+#login-container input {
+    margin-bottom: 10px;
+    padding: 5px;
+}
+
 .app {
     height: 100%;
     display: flex;
