--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
 body {
   font-family: 'Open Sans', Arial, sans-serif;
